# toktok-android

./: .gitattributes  settings.gradle
app/: build.gradle
app/src/androidTest/java/im/tox/toktok/app/: MainActivityHolderTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/im/tox/toktok/app/: AppWork.java  BundleKey.java  MainActivityHolder.java
app/src/main/java/im/tox/toktok/app/domain/: ChatMessage.java  Friend.java  FriendMessage.java
app/src/main/java/im/tox/toktok/app/event/: ConnectionStatusEvent.java  FriendRequestEvent.java
app/src/main/java/im/tox/toktok/app/main/: MainFragment.java
app/src/main/java/im/tox/toktok/app/main/chats/: ChatsFragment.java  ChatsRecyclerAdapter.java
app/src/main/java/im/tox/toktok/app/main/friends/: FriendsFragment.java  SlideInContactsLayout.java
app/src/main/java/im/tox/toktok/app/message_activity/: MessageActivity.java  MessageAdapter.java  MessageGroupContacts.java
app/src/main/java/im/tox/toktok/app/profile/: ProfileFragment.java
app/src/main/java/im/tox/toktok/app/simple_dialogs/: SimpleAddFriendDialogDesign.java  SimpleShareDialogDesign.java
app/src/main/res/drawable/: status_circle.xml
app/src/main/res/layout/: activity_main.xml  activity_profile.xml  simple_share_dialog_design.xml
app/src/main/res/values/: strings.xml
jtoxcore/: CMakeLists.txt  build.gradle
jtoxcore/src/androidTest/java/im/tox/jtoxcore/: ExampleInstrumentedTest.java
jtoxcore/src/main/: AndroidManifest.xml
jtoxcore/src/main/cpp/libsodium/: CMakeLists.txt
jtoxcore/src/main/cpp/toxcore/: CMakeLists.txt
jtoxcore/src/main/cpp/toxcore/toxencryptsave/: toxencryptsave.c
jtoxcore/src/main/cpp/toxcore/toxjni/: ArrayFromJava.cpp  ArrayToJava.cpp  im_tox_jtoxcore_JTox.cpp
jtoxcore/src/main/java/im/tox/jtoxcore/: JTox.java  ToxConnection.java
jtoxcore/src/main/java/im/tox/jtoxcore/callbacks/: CallbackHandler.java  OnFriendConnectionStatusChangeCallback.java  OnFriendLossLessPacketCallback.java  OnFriendLossyPacketCallback.java  OnFriendMessageCallback.java  OnFriendNameChangeCallback.java  OnFriendReadReceiptCallback.java  OnFriendRequestCallback.java  OnFriendStatusChangeCallback.java  OnFriendStatusMessageChangeCallback.java  OnFriendTypingChangeCallback.java  OnSelfConnectionStatusCallback.java
jtoxcore/src/main/jni/: im_tox_jtoxcore_JTox.h
jtoxcore/src/main/res/values/: strings.xml
jtoxcore/src/test/java/im/tox/jtoxcore/: ExampleUnitTest.java
