cmake_minimum_required(VERSION 3.6)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include/sodium)
add_library( # Sets the name of the library.
             sodium

             # Sets the library as a shared library.
             SHARED

             # Provides a relative path to your source file(s).
        crypto_generichash/crypto_generichash.c
        crypto_generichash/blake2b/generichash_blake2.c
        crypto_generichash/blake2b/ref/blake2b-compress-ref.c
        crypto_generichash/blake2b/ref/blake2b-compress-ssse3.c
        crypto_generichash/blake2b/ref/blake2b-compress-avx2.c
        crypto_generichash/blake2b/ref/blake2b-compress-sse41.c
        crypto_generichash/blake2b/ref/generichash_blake2b.c
        crypto_generichash/blake2b/ref/blake2b-ref.c
        crypto_kx/crypto_kx.c
        crypto_sign/crypto_sign.c
        crypto_sign/ed25519/sign_ed25519.c
        crypto_sign/ed25519/ref10/obsolete.c
        crypto_sign/ed25519/ref10/sign.c
        crypto_sign/ed25519/ref10/keypair.c
        crypto_sign/ed25519/ref10/open.c
        crypto_secretbox/crypto_secretbox.c
        crypto_secretbox/crypto_secretbox_easy.c
        crypto_secretbox/xsalsa20poly1305/secretbox_xsalsa20poly1305.c
        crypto_secretbox/xchacha20poly1305/secretbox_xchacha20poly1305.c
        crypto_pwhash/crypto_pwhash.c
        crypto_pwhash/argon2/blake2b-long.c
        crypto_pwhash/argon2/argon2-core.c
        crypto_pwhash/argon2/argon2-fill-block-avx512f.c
        crypto_pwhash/argon2/argon2-fill-block-ref.c
        crypto_pwhash/argon2/argon2-fill-block-ssse3.c
        crypto_pwhash/argon2/pwhash_argon2i.c
        crypto_pwhash/argon2/pwhash_argon2id.c
        crypto_pwhash/argon2/argon2.c
        crypto_pwhash/argon2/argon2-fill-block-avx2.c
        crypto_pwhash/argon2/argon2-encoding.c
        crypto_pwhash/scryptsalsa208sha256/scrypt_platform.c
        crypto_pwhash/scryptsalsa208sha256/crypto_scrypt-common.c
        crypto_pwhash/scryptsalsa208sha256/pwhash_scryptsalsa208sha256.c
        crypto_pwhash/scryptsalsa208sha256/pbkdf2-sha256.c
        crypto_pwhash/scryptsalsa208sha256/nosse/pwhash_scryptsalsa208sha256_nosse.c
        crypto_pwhash/scryptsalsa208sha256/sse/pwhash_scryptsalsa208sha256_sse.c
        crypto_verify/sodium/verify.c
        crypto_auth/crypto_auth.c
        crypto_auth/hmacsha512/auth_hmacsha512.c
        crypto_auth/hmacsha512256/auth_hmacsha512256.c
        crypto_auth/hmacsha256/auth_hmacsha256.c
        crypto_kdf/crypto_kdf.c
        crypto_kdf/blake2b/kdf_blake2b.c
        crypto_shorthash/crypto_shorthash.c
        crypto_shorthash/siphash24/shorthash_siphash24.c
        crypto_shorthash/siphash24/shorthash_siphashx24.c
        crypto_shorthash/siphash24/ref/shorthash_siphashx24_ref.c
        crypto_shorthash/siphash24/ref/shorthash_siphash24_ref.c
        crypto_scalarmult/crypto_scalarmult.c
        crypto_scalarmult/ristretto255/ref10/scalarmult_ristretto255_ref10.c
        crypto_scalarmult/ed25519/ref10/scalarmult_ed25519_ref10.c
        crypto_scalarmult/curve25519/scalarmult_curve25519.c
        crypto_scalarmult/curve25519/sandy2x/curve25519_sandy2x.c
        crypto_scalarmult/curve25519/sandy2x/fe_frombytes_sandy2x.c
        crypto_scalarmult/curve25519/sandy2x/fe51_invert.c
        crypto_scalarmult/curve25519/ref10/x25519_ref10.c
        crypto_onetimeauth/crypto_onetimeauth.c
        crypto_onetimeauth/poly1305/onetimeauth_poly1305.c
        crypto_onetimeauth/poly1305/donna/poly1305_donna.c
        crypto_onetimeauth/poly1305/sse2/poly1305_sse2.c
        randombytes/randombytes.c
        randombytes/sysrandom/randombytes_sysrandom.c
        randombytes/internal/randombytes_internal_random.c
        crypto_box/crypto_box_easy.c
        crypto_box/crypto_box_seal.c
        crypto_box/crypto_box.c
        crypto_box/curve25519xsalsa20poly1305/box_curve25519xsalsa20poly1305.c
        crypto_box/curve25519xchacha20poly1305/box_curve25519xchacha20poly1305.c
        crypto_box/curve25519xchacha20poly1305/box_seal_curve25519xchacha20poly1305.c
        sodium/codecs.c
        sodium/runtime.c
        sodium/core.c
        sodium/utils.c
        sodium/version.c
        crypto_stream/crypto_stream.c
        crypto_stream/xchacha20/stream_xchacha20.c
        crypto_stream/chacha20/stream_chacha20.c
        crypto_stream/chacha20/ref/chacha20_ref.c
        crypto_stream/chacha20/dolbeau/chacha20_dolbeau-avx2.c
        crypto_stream/chacha20/dolbeau/chacha20_dolbeau-ssse3.c
        crypto_stream/salsa20/stream_salsa20.c
        crypto_stream/salsa20/ref/salsa20_ref.c
        crypto_stream/salsa20/xmm6int/salsa20_xmm6int-avx2.c
        crypto_stream/salsa20/xmm6int/salsa20_xmm6int-sse2.c
        crypto_stream/salsa20/xmm6/salsa20_xmm6.c
        crypto_stream/salsa2012/stream_salsa2012.c
        crypto_stream/salsa2012/ref/stream_salsa2012_ref.c
        crypto_stream/salsa208/stream_salsa208.c
        crypto_stream/salsa208/ref/stream_salsa208_ref.c
        crypto_stream/xsalsa20/stream_xsalsa20.c
        crypto_hash/crypto_hash.c
        crypto_hash/sha512/hash_sha512.c
        crypto_hash/sha512/cp/hash_sha512_cp.c
        crypto_hash/sha256/hash_sha256.c
        crypto_hash/sha256/cp/hash_sha256_cp.c
        crypto_aead/xchacha20poly1305/sodium/aead_xchacha20poly1305.c
        crypto_aead/aes256gcm/aesni/aead_aes256gcm_aesni.c
        crypto_aead/chacha20poly1305/sodium/aead_chacha20poly1305.c
        crypto_secretstream/xchacha20poly1305/secretstream_xchacha20poly1305.c
        crypto_core/salsa/ref/core_salsa_ref.c
        crypto_core/hchacha20/core_hchacha20.c
        crypto_core/hsalsa20/core_hsalsa20.c
        crypto_core/hsalsa20/ref2/core_hsalsa20_ref2.c
        crypto_core/ed25519/core_ed25519.c
        crypto_core/ed25519/core_ristretto255.c
        crypto_core/ed25519/ref10/ed25519_ref10.c
        crypto_generichash/blake2b/ref/blake2b-load-sse2.h
        crypto_generichash/blake2b/ref/blake2b-load-avx2.h
        crypto_generichash/blake2b/ref/blake2.h
        crypto_generichash/blake2b/ref/blake2b-compress-ssse3.h
        crypto_generichash/blake2b/ref/blake2b-load-sse41.h
        crypto_generichash/blake2b/ref/blake2b-compress-avx2.h
        crypto_generichash/blake2b/ref/blake2b-compress-sse41.h
        crypto_sign/ed25519/ref10/sign_ed25519_ref10.h
        include/sodium.h
        include/sodium/crypto_stream_salsa2012.h
        include/sodium/crypto_auth.h
        include/sodium/utils.h
        include/sodium/crypto_core_hchacha20.h
        include/sodium/crypto_hash_sha512.h
        include/sodium/core.h
        include/sodium/export.h
        include/sodium/crypto_core_salsa20.h
        include/sodium/crypto_shorthash_siphash24.h
        include/sodium/randombytes.h
        include/sodium/crypto_hash_sha256.h
        include/sodium/crypto_stream.h
        include/sodium/crypto_auth_hmacsha512.h
        include/sodium/crypto_aead_xchacha20poly1305.h
        include/sodium/crypto_stream_salsa20.h
        include/sodium/crypto_onetimeauth_poly1305.h
        include/sodium/crypto_scalarmult_ristretto255.h
        include/sodium/crypto_kx.h
        include/sodium/crypto_hash.h
        include/sodium/crypto_sign.h
        include/sodium/crypto_kdf.h
        include/sodium/crypto_auth_hmacsha256.h
        include/sodium/crypto_box.h
        include/sodium/crypto_verify_32.h
        include/sodium/crypto_core_ristretto255.h
        include/sodium/crypto_stream_xchacha20.h
        include/sodium/crypto_core_salsa208.h
        include/sodium/crypto_auth_hmacsha512256.h
        include/sodium/crypto_aead_chacha20poly1305.h
        include/sodium/randombytes_sysrandom.h
        include/sodium/runtime.h
        include/sodium/crypto_stream_salsa208.h
        include/sodium/crypto_aead_aes256gcm.h
        include/sodium/crypto_core_salsa2012.h
        include/sodium/crypto_secretbox_xchacha20poly1305.h
        include/sodium/crypto_scalarmult.h
        include/sodium/crypto_pwhash.h
        include/sodium/crypto_verify_16.h
        include/sodium/crypto_stream_chacha20.h
        include/sodium/crypto_stream_xsalsa20.h
        include/sodium/crypto_core_hsalsa20.h
        include/sodium/crypto_kdf_blake2b.h
        include/sodium/crypto_scalarmult_curve25519.h
        include/sodium/crypto_shorthash.h
        include/sodium/crypto_pwhash_argon2id.h
        include/sodium/crypto_secretstream_xchacha20poly1305.h
        include/sodium/crypto_pwhash_scryptsalsa208sha256.h
        include/sodium/crypto_sign_ed25519.h
        include/sodium/crypto_onetimeauth.h
        include/sodium/crypto_verify_64.h
        include/sodium/crypto_box_curve25519xchacha20poly1305.h
        include/sodium/crypto_core_ed25519.h
        include/sodium/crypto_pwhash_argon2i.h
        include/sodium/randombytes_internal_random.h
        include/sodium/crypto_generichash.h
        include/sodium/crypto_secretbox_xsalsa20poly1305.h
        include/sodium/crypto_secretbox.h
        include/sodium/crypto_scalarmult_ed25519.h
        include/sodium/crypto_box_curve25519xsalsa20poly1305.h
        include/sodium/crypto_generichash_blake2b.h
        include/sodium/crypto_sign_edwards25519sha512batch.h
        include/sodium/private/ed25519_ref10.h
        include/sodium/private/quirks.h
        include/sodium/private/ed25519_ref10_fe_25_5.h
        include/sodium/private/ed25519_ref10_fe_51.h
        include/sodium/private/sse2_64_32.h
        include/sodium/private/common.h
        include/sodium/private/mutex.h
        include/sodium/private/chacha20_ietf_ext.h
        include/sodium/private/implementations.h
        crypto_pwhash/argon2/blamka-round-ref.h
        crypto_pwhash/argon2/blamka-round-avx2.h
        crypto_pwhash/argon2/argon2.h
        crypto_pwhash/argon2/blamka-round-ssse3.h
        crypto_pwhash/argon2/argon2-encoding.h
        crypto_pwhash/argon2/blake2b-long.h
        crypto_pwhash/argon2/blamka-round-avx512f.h
        crypto_pwhash/argon2/argon2-core.h
        crypto_pwhash/scryptsalsa208sha256/crypto_scrypt.h
        crypto_pwhash/scryptsalsa208sha256/pbkdf2-sha256.h
        crypto_shorthash/siphash24/ref/shorthash_siphash_ref.h
        crypto_scalarmult/curve25519/scalarmult_curve25519.h
        crypto_scalarmult/curve25519/sandy2x/consts_namespace.h
        crypto_scalarmult/curve25519/sandy2x/ladder_namespace.h
        crypto_scalarmult/curve25519/sandy2x/fe.h
        crypto_scalarmult/curve25519/sandy2x/ladder_base_namespace.h
        crypto_scalarmult/curve25519/sandy2x/ladder.h
        crypto_scalarmult/curve25519/sandy2x/fe51.h
        crypto_scalarmult/curve25519/sandy2x/curve25519_sandy2x.h
        crypto_scalarmult/curve25519/sandy2x/fe51_namespace.h
        crypto_scalarmult/curve25519/sandy2x/ladder_base.h
        crypto_scalarmult/curve25519/ref10/x25519_ref10.h
        crypto_onetimeauth/poly1305/onetimeauth_poly1305.h
        crypto_onetimeauth/poly1305/donna/poly1305_donna.h
        crypto_onetimeauth/poly1305/donna/poly1305_donna64.h
        crypto_onetimeauth/poly1305/donna/poly1305_donna32.h
        crypto_onetimeauth/poly1305/sse2/poly1305_sse2.h
        crypto_stream/chacha20/stream_chacha20.h
        crypto_stream/chacha20/ref/chacha20_ref.h
        crypto_stream/chacha20/dolbeau/u4.h
        crypto_stream/chacha20/dolbeau/chacha20_dolbeau-ssse3.h
        crypto_stream/chacha20/dolbeau/u0.h
        crypto_stream/chacha20/dolbeau/u1.h
        crypto_stream/chacha20/dolbeau/chacha20_dolbeau-avx2.h
        crypto_stream/chacha20/dolbeau/u8.h
        crypto_stream/salsa20/stream_salsa20.h
        crypto_stream/salsa20/ref/salsa20_ref.h
        crypto_stream/salsa20/xmm6int/u4.h
        crypto_stream/salsa20/xmm6int/u0.h
        crypto_stream/salsa20/xmm6int/u1.h
        crypto_stream/salsa20/xmm6int/salsa20_xmm6int-avx2.h
        crypto_stream/salsa20/xmm6int/u8.h
        crypto_stream/salsa20/xmm6int/salsa20_xmm6int-sse2.h
        crypto_stream/salsa20/xmm6/salsa20_xmm6-asm_namespace.h
        crypto_stream/salsa20/xmm6/salsa20_xmm6.h
        crypto_core/ed25519/ref10/fe_25_5/constants.h
        crypto_core/ed25519/ref10/fe_25_5/fe.h
        crypto_core/ed25519/ref10/fe_25_5/base2.h
        crypto_core/ed25519/ref10/fe_25_5/base.h
        crypto_core/ed25519/ref10/fe_51/constants.h
        crypto_core/ed25519/ref10/fe_51/fe.h
        crypto_core/ed25519/ref10/fe_51/base2.h
        crypto_core/ed25519/ref10/fe_51/base.h)

find_library( # Sets the name of the path variable.
                log-lib

                # Specifies the name of the NDK library that
                # you want CMake to locate.
                log )

target_link_libraries( # Specifies the target library.
                sodium

              # Links the target library to the log library
              # included in the NDK.
              ${log-lib} )
